--- a/index.html
+++ b/index.html
@@ -32,47 +32,13 @@
   </nav>
 
   <div id="container">
-    <aside>
-      <div id="matchcentre">
-        <h4>Volgende wedstrijd</h4>
-        <table id="next-match">
-          <tr>
-            <td>
-              <img src="img/clubs/fcdenbosch.png" alt="fcdenbosch"/>
-              <!-- bron afbeelding: www.fcdenbosch.nl -->
-            </td>
-            <td>
-              vs.
-            </td>
-            <td>
-              <img src="img/clubs/almerecity.png" alt="almerecity"/>
-              <!-- bron afbeelding: http://www.almerecity.nl/ -->
-            </td>
-          </tr>
-          <tr>
-            <td>
-              FC Den Bosch
-            </td>
-            <td>
-
-            </td>
-            <td>
-              Almere City FC
-            </td>
-          </tr>
-        </table>
-        <p id="match-info">
-          Vrijdag 12 januari<br />
-          20.00, Stadion De Vliert
-        </p>
-      </div>
-    </aside>
     <section>
       <!-- <h2>HOME</h2> -->
 
-        <p id="welcome">
-          Welkom op de vernieuwde website van FC Den Bosch. Op deze website kunt u informatie vinden over de selectie, over het speelschema en op de homepagina blijft u op de hoogte van het laatste nieuws.
-        </p>
+      <p id="welcome">
+        Welkom op de vernieuwde website van FC Den Bosch. Op deze website kunt u informatie vinden over de selectie, over het speelschema en op de homepagina blijft u op de hoogte van het laatste nieuws.
+      </p>
+
       <article>
         <h3>FC DEN BOSCH IN BESLOTEN OEFENDUEL VOORBIJ FC EINDHOVEN</h3>
         <p>
@@ -89,12 +55,12 @@
           FC Den Bosch hervat de competitie op vrijdag 12 januari aanstaande (20.00 uur) met de thuiswedstrijd in Stadion De Vliert tegen Almere City FC.
         </p>
       </article>
+
       <article>
         <h3>Samenvatting FC Den Bosch - Fortuna Sittard</h3>
         <p>
-          Bekijk nu de samenvatting van het duel van de plaatselijke FC tegen de huidige nummer 2 van de ranglijst, Fortuna Sittard. De wedstrijd is gespeeld op 15 december 2017.
-          De eindstand van de wedstrijd was 2-4 in het voordeel van de club uit Limburg. De bezoekers kwamen niet om te voetballen, maar waren al vanaf de eerse minuten tijd aan het rekken. Zo kwam de Bossche ploeg niet
-          in de wedstrijd.
+          Bekijk nu de samenvatting van het duel van de plaatselijke FC tegen de huidige nummer 2 van de ranglijst, Fortuna Sittard. De wedstrijd is gespeeld op 15 december 2017. De eindstand van de wedstrijd was 2-4 in het voordeel van de club uit Limburg. De
+          bezoekers kwamen niet om te voetballen, maar waren al vanaf de eerse minuten tijd aan het rekken. Zo kwam de Bossche ploeg niet in de wedstrijd.
         </p>
         <figure>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/gRI6niaUHSc?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -105,8 +71,8 @@
       <article>
         <h3>Ruben Rodrigues komt over van Gemert</h3>
         <p>
-          Ondanks al het gezeik met de supporters hebben we ook nog positief nieuws, we hebben de tallentvolle Ruben Rodrigues overgenomen van VV Gemert. De 21 jarige speler heeft in het verleden ook al bij de Bossche hoofdmacht gespeeld. In de jaren dat hij afwezig was
-          heeft hij veel getraint en hij is helemaal klaar om de grote stap te maken. Hij heeft gevoetbald bij Wilhelmina Boys uit Best en is daarna verhuisd naar Gemert.
+          Ondanks al het gezeik met de supporters hebben we ook nog positief nieuws, we hebben de tallentvolle Ruben Rodrigues overgenomen van VV Gemert. De 21 jarige speler heeft in het verleden ook al bij de Bossche hoofdmacht gespeeld. In de jaren dat hij afwezig
+          was heeft hij veel getraint en hij is helemaal klaar om de grote stap te maken. Hij heeft gevoetbald bij Wilhelmina Boys uit Best en is daarna verhuisd naar Gemert.
         </p>
         <p>
           Volgens trainer WIl Boessen is Ruben een zeer tallentvolle vleugelspeler die op meerdere plaatsen uit de voeten kan. Hij valt op door zijn sterke individuele actie. Wij wensen hem veel succes toe bij FC Den Bosch.
@@ -114,6 +80,38 @@
       </article>
 
     </section>
+    <aside>
+        <h4>Volgende wedstrijd</h4>
+        <table id="next-match">
+          <tr>
+            <td>
+              <img src="img/clubs/fcdenbosch.png" alt="fcdenbosch" />
+              <!-- bron afbeelding: www.fcdenbosch.nl -->
+            </td>
+            <td>
+              vs.
+            </td>
+            <td>
+              <img src="img/clubs/almerecity.png" alt="almerecity" />
+              <!-- bron afbeelding: http://www.almerecity.nl/ -->
+            </td>
+          </tr>
+          <tr>
+            <td>
+              FC Den Bosch
+            </td>
+            <td>
+
+            </td>
+            <td>
+              Almere City FC
+            </td>
+          </tr>
+        </table>
+        <p id="match-info">
+          Vrijdag 12 januari<br /> 20.00, Stadion De Vliert
+        </p>
+    </aside>
   </div>
   <div></div>
   <footer>
