disabled the alert
site is af?😥

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
       website door <a href="https://www.jasperdeveer.nl">Jasper de Veer</a>
     </p>
   </footer>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
 alert("Site is nog niet af!");
-</script>
+</script> -->
 </body>
 
 </html>
