--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <p>
           FC Den Bosch hervat de competitie op vrijdag 12 januari aanstaande (20.00 uur) met de thuiswedstrijd in Stadion De Vliert tegen Almere City FC.
         </p>
+        <!-- nieuwsbericht van www.fcdenbosch.nl -->
       </article>
 
       <article>
