over ons en cursussen toegevoegd

--- a/about.html
+++ b/about.html
@@ -42,10 +42,13 @@
     <div class='fullscreenDiv'>
       <div class="center">
         <div id="header-text">
-          <p id="slogan">
-            Over ons
+          <p id="header-overons">
+            over ons
           </p>
-          <h1 id="title">smart robots smarter people<span class="accent-color blink_me">_</span></h1>
+          <p id="slogan-overons">
+            robotacademie
+          </p>
+          <h1 id="title-overons">smart robots <span class="accent-color">-</span> smarter people<span class="accent-color blink_me">_</span></h1>
 
         </div>
       </div>
