--- a/cursus.html
+++ b/cursus.html
@@ -15,6 +15,7 @@
   <link href="/styles/style.css" rel="stylesheet" />
   <link href="/styles/cursus.css" rel="stylesheet" />
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-inverse">
@@ -49,28 +50,102 @@
       </div>
     </div>
   </header>
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <p>
-        cursus 1
-      </p>
+
+  <div class="container">
+    <div class="row" id="cursussen-text">
+      <div class="col-sm-12" id="cursussen-introtext">
+        <p> De trainingen zijn allen erg praktijkgericht. Er komt eerst een stuk theorie te pas en daarna zal het praktijkgedeelte beginnen. Hierbij oefen en speel je met de Robots. Hierdoor zal je zien hoe het is om met de display te werken en de robot aan
+          te sturen. En dus ook zien wat de robot wel en niet kan. Tot slot is er ook nog een stukje onlinetraining. We starten nu met dit soort basistrainingen maar zijn van plan dit uit te bouwen. Voor de bedrijven die hier al eerder zijn geweest willen
+          wij namelijk een verdiepende training op gaan zetten.
+
+        </p>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <p>
-        cursus 2
-      </p>
-    </div>
-    <div class="col-sm-4">
-      <p>
-        cursus 3
-      </p>
+
+
+
+
+
+
+    <div class="container" id="container">
+      <div class="row" id="container-kolommen">
+        <h2 id="kolom-title">Wat kan mijn medewerker na afloop van de training?
+
+
+    </h2>
+        <div class="col-sm-4" id="kolommen">
+          <h3>
+        Training Robobuddy
+
+
+      </h3>
+          <h3>(1 dagdeel)</h3>
+          <p id="text-kolommen">
+            <p id="text-kolommen">
+
+              Het leerdoel is kennismaken met slimme robots voor de productie-omgeving. Om zo te komen tot een realistisch en zeer waarschijnlijk positief beeld over het werken met robots.
+            </p>
+            <p id="text-kolommen">
+
+
+
+              Voor productiemedewerkers Na afloop weet uw medewerker wat robots zijn, wat ze kunnen en wat ze niet kunnen. Hoe ze eenvoudig te bedienen zijn. Hoe ze er veilig mee kunnen werken. Uw medewerker heeft een beeld van wat dit gaat betekenen voor zijn/ haar
+              huidige taken. Beseft dat samenwerken met de robot eenvoudig mogelijk én leuk kan zijn. Kortom; een realistische en daardoor constructieve houding. Tijdens de training wordt er geoefend met het display van de robot: aanzetten, in werking
+              brengen, na fout herstarten.
+            </p>
+            <p id="text-kolommen">
+
+              Kortom, een inspirerende kennismaking met de nieuwe generatie slimme robots!</p>
+
+
+
+          </p>
+        </div>
+        <div class="col-sm-4" id="kolommen">
+          <h3>
+        Training Robotoperator  Palletizer of Packaging
+
+      </h3>
+          <h3>(2 dagdelen)</h3>
+
+
+          <p id="text-kolommen">
+
+            <p id="text-kolommen">Het leerdoel is optimaal samenwerken met de robot bij het stapelen en inpakken. Voor een duurzaam en zo efficiënt mogelijk proces. Voor productiemedewerkers</p>
+            <p id="text-kolommen">
+              Deze training heeft ook de inhoud van Robobuddy. Extra is dat uw medewerker intensief heeft geoefend met het bedienen van de robot, bij het stapelen of het inpakken van een product in dozen. Met het aanzetten, in werking brengen en herstarten na een fout.
+              De medewerker kan een geïnstalleerde robot bijstellen voor een optimaal functionerend productieproces. Hij/zij kan de lasersensor afstellen, de grijper wisselen, de oppakpositie van de robot bijstellen, de snelheid van de robot aanpassen,
+              de plaatsbeweging van de robot aanpassen, de robot na een fout herstarten, mogelijke veiligheidsrisico’s uitleggen. De medewerker kan de verschillende onderdelen van het robotsysteem aanwijzen. </p>
+
+            <p id="text-kolommen">Kortom, optimaal leren samenwerken met de nieuwe generatie slimme robots!
+
+            </p>
+        </div>
+        <div class="col-sm-4" id="kolommen">
+          <h3>
+        Training Robotexpert
+
+
+      </h3>
+          <h3>(4 dagdelen)</h3>
+          <p id="text-kolommen">
+
+            <p id="text-kolommen">Het leerdoel is optimaal samenwerken en het kunnen invoeren van nieuwe patronen voor de robot. Voor een duurzaam en zo efficiënt mogelijk proces. Voor technische dienst / operationeel management Deze training heeft ook de inhoud van Robobuddy
+              en Robotoperator. Extra is dat uw operationeel manager, uw ervaren operator of medewerker Technische Dienst bekend is met de meest voorkomende storingen.</p>
+            <p id="text-kolommen">Hij/zij kan zijn collega’s leren veilig samen te werken met de robot . Hij weet hoe hij/zij een nieuw stapelpatroon kan inleren. Uw medewerker kan een geïnstalleerde robot bijstellen voor een optimaal functionerend productieproces. Hij/zij
+              kan een eenvoudig cobotprogramma in flowchart lezen en het stapsgewijze gedrag hiervan uitleggen. De medewerker kan een lasersensor afstellen zodat deze een product foutloos detecteert. De medewerker kan een grijper wisselen en de oppakpositie
+              van de cobot zo bijstellen dat de grijper het product goed oppakt. De medewerker kan de snelheid van de cobot aanpassen om de kans op het loslaten van het product tijdens verplaatsing te minimaliseren. De medewerker kan de plaatsbeweging
+              van de cobot aanpassen zodat producten netjes uitgelijnd en zonder botsing geplaatst worden. De medewerker kan na een opgetreden fout de cobot en zijn omgeving naar de gewenste situatie brengen (bijvoorbeeld juiste aantal dozen op pallet
+              gestapeld) en de cobot herstarten. De medewerker kan van een cobot in het productieproces mogelijke veiligheidsrisico’s uitleggen.</p>
+
+            <p id="text-kolommen">Uw medewerker kan verder aan de hand van de specificaties van een robot uitleggen of deze een gewenste taak in het eigen productieproces kan uitvoeren.
+
+            </p>
+        </div>
+      </div>
     </div>
 
   </div>
-
-
-</div>
   <footer>
     <div class="row" id="footer">
       <div class="col-sm-12">
@@ -79,9 +154,9 @@
         <a href="https://twitter.com/RobotAcademie?s=08" target="_blank"><img src="/img/social/001-twitter.png" alt="logo-twitter" class="socialicon"></a>
       </div>
       <div class="col-sm-12">
-      <p id="footertext">
-        2017 Robot Academie | Alle Rechten Voorbehouden
-      </p>
+        <p id="footertext">
+          2017 Robot Academie | Alle Rechten Voorbehouden
+        </p>
       </div>
     </div>
   </footer>
