--- a/index.html
+++ b/index.html
@@ -77,39 +77,39 @@
 
     <div class="row" id="drieling">
 
-      <div class="col-sm-4" id="werkgever-col">
+      <div class="col-sm-4 driedeling-blok" id="werkgever-col">
         <div class="driedeling-blok">
-          <img src="img/icons/iconwerkgever.png" class="img-responsive driedeling-icon" alt="icoon werkgever" />
+          <img src="img/icons/002-people-1-01.png" class="img-responsive driedeling-icon" alt="icoon werkgever" />
           <h3> Werkgever </h3>
           <p>
             Door middel van deze training zal u om leren gaan met uw nieuwe digitale collega, de robot. De training zal zorgen voor een betere positie op de arbeidsmarkt. U zal door de training beter werk kunnen uitvoeren, de robots zullen namelijk het dull,dirty
             & dangerous work verrichten. Graag leren samenwerken met robots?
           </p>
-          <button type="button" class="btn btn-primary btn-driedeling">Lees meer</button>
+          <a href="werkgever.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
         </div>
       </div>
 
-      <div class="col-sm-4" id="cursist-col">
+      <div class="col-sm-4 driedeling-blok" id="cursist-col">
         <div class="driedeling-blok">
-          <img src="img/icons/iconmedewerker.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
+          <img src="img/icons/003-brainstorming-01.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
         <h3> Cursist </h3>
         <p>
           Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
           om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
         </p>
-        <button type="button" class="btn btn-primary btn-driedeling">Lees meer</button>
+        <a href="cursist.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
       </div>
     </div>
 
-      <div class="col-sm-4" id="robot-col">
+      <div class="col-sm-4 driedeling-blok" id="robot-col">
         <div class="driedeling-blok">
-          <img src="img/icons/iconrobot.png" class="img-responsive driedeling-icon" alt="icoon robot" />
+          <img src="img/icons/004-settings-01.png" class="img-responsive driedeling-icon" alt="icoon robot" />
         <h3> Robot </h3>
         <p>
           Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit namelijk nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik hoef zelfs niet naar
           het toilet! Ik zal 24 uur per dag, 7 dagen in de week beschikbaar zijn om aan uw zijde te werken. Ik word natuurlijk graag aangestuurd door even bekwamen operator.
         </p>
-        <button type="button" class="btn btn-primary btn-driedeling">Lees meer</button>
+        <a href="robot.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
       </div>
     </div>
     </div>
