kleine foto update

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <button type="button" class="btn btn-primary btn-readmore" id="btn-overons">Lees meer</button>
       </div>
       <div class="col-sm-6">
-        <img src="img/foto2.jpg" / class="img-responsive">
+        <img src="img/robotacademie-1.jpg" / class="img-responsive">
       </div>
 
     </div>
