--- a/cursist.html
+++ b/cursist.html
@@ -78,6 +78,8 @@ header{
   <br /><span class="quotename">- Josje Verbeeten
   </span>
         </h4>
+        <a href="index.html" class="gobackbutton"><button type="button" class="btn btn-outline-dark btn-lg">Ga terug naar de Homepage</button></a>
+
       </div>
     </div>
 
