--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <p id="intro-text" class="center"> Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. Robotacademie helpt bedrijven zich voor te bereiden op de toekomst
             doormiddel van 2 dagen theorie, praktijk en online training over het begeleiden en aansturen van robots.
           </p>
-          <button type="button" class="btn btn-primary btn-header">Neem Contact Op</button>
-          <button type="button" class="btn btn-secondary btn-header">Onze Trainingen</button>
+          <a href="contact.html"><button type="button" class="btn btn-primary btn-header">Neem Contact Op</button></a>
+          <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Cursussen</button></a>
         </div>
       </div>
     </div>​
@@ -85,7 +85,7 @@
             Door middel van deze training zal u om leren gaan met uw nieuwe digitale collega, de robot. De training zal zorgen voor een betere positie op de arbeidsmarkt. U zal door de training beter werk kunnen uitvoeren, de robots zullen namelijk het dull,dirty
             & dangerous work verrichten. Graag leren samenwerken met robots?
           </p>
-          <a href="werkgever.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
+          <a href="werkgever.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
         </div>
       </div>
 
@@ -97,7 +97,7 @@
           Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
           om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
         </p>
-        <a href="cursist.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
+        <a href="cursist.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
       </div>
     </div>
 
@@ -109,7 +109,7 @@
           Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit namelijk nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik hoef zelfs niet naar
           het toilet! Ik zal 24 uur per dag, 7 dagen in de week beschikbaar zijn om aan uw zijde te werken. Ik word natuurlijk graag aangestuurd door even bekwamen operator.
         </p>
-        <a href="robot.html"><button type="button" class="btn btn-primary btn-driedeling">Lees meer</button></a>
+        <a href="robot.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
       </div>
     </div>
     </div>
