--- a/robot.html
+++ b/robot.html
@@ -88,6 +88,8 @@
           </ul>
         </p>
       </div>
+      <a href="index.html" class="gobackbutton"><button type="button" class="btn btn-outline-dark btn-lg">Ga terug naar de Homepage</button></a>
+
     </div>
 
   </div>
