--- a/werkgever.html
+++ b/werkgever.html
@@ -95,6 +95,9 @@ Er zijn drie soorten trainingen, namelijk:
           De trainingen zijn allen erg praktijkgericht. Er komt eerst een stuk theorie te pas en daarna zal het praktijkgedeelte beginnen. Hierbij oefen en speel je met de Robots. Hierdoor zal je zien hoe het is om met de display te werken en de robot aan te sturen. En dus ook zien wat de robot wel en niet kan. Tot slot is er ook nog een stukje onlinetraining. We starten nu met dit soort basistrainingen maar zijn van plan dit uit te bouwen. Voor de bedrijven die hier al eerder zijn geweest willen wij namelijk een verdiepende training op gaan zetten.
         </p>
       </div>
+      <div class="col-sm-12">
+        <a href="index.html" class="gobackbutton"><button type="button" class="btn btn-outline-dark btn-lg">Ga terug naar de Homepage</button></a>
+      </div>
     </div>
 
   </div>
