--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,7 @@
       <div class="col-sm-8">
         <form name="Contactformulier" method="post" action="mailto:info@smart-robotics.nl">
           <p>
-            Voornaam: <input name="naam" required="required" type="text"><br />
-            Achternaam: <input name="naam" required="required" type="text">
+            Voornaam: <input name="naam" required="required" type="text"><br /> Achternaam: <input name="naam" required="required" type="text">
           </p>
           <p>
             E-mailadres: <input type="email" required="required" placeholder="naam@botmail.com">
@@ -82,7 +81,32 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          hoi
+          <address>
+            <h3>Adresgegevens</h3>
+            <p>
+            De Rijn 16<br />
+            5684PJ best<br />
+            Nederland<br /></p>
+          </address>
+        </div>
+        <div class="col-sm-6">
+          <h3>Contactgegevens</h3>
+          <p>
+            <a href="mailto:info@smart-robotics.nl">info@smart-robotics.nl</a>
+          </p>
+<p>
+  Algemeen & sales: +31 (0)40 744 04 48
+</p>
+<p>
+  Support & development: +31 (0)40 744 04 49
+</p>
+<p>
+  Service & Aftersales: +31 (0)6 41 52 46 85
+</p>
+<p>
+  KvK: 63084147<br />
+  BTW nummer: NL855085009B01
+</p>
         </div>
       </div>
     </div>
@@ -117,13 +141,13 @@
   <script src="js/bootstrap.min.js"></script>
 
   <script>
-  $(document).ready(function(){
-  $('#jouw_select_element').on('change', function() {
-   if($(this).val() == 'robot'){
-    $('#jouw_input_text_veld').val('blieb blieb robot!');
-   }
-  })
-  });
+    $(document).ready(function() {
+      $('#jouw_select_element').on('change', function() {
+        if ($(this).val() == 'robot') {
+          $('#jouw_input_text_veld').val('blieb blieb robot!');
+        }
+      })
+    });
   </script>
 </body>
 
