--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="row" id="drieling">
 
-      <div class="col-sm-4 driedeling-blok" id="werkgever-col">
+      <div class="col-sm-4" id="werkgever-col">
         <div class="driedeling-blok">
           <img src="img/icons/002-people-1-01.png" class="img-responsive driedeling-icon" alt="icoon werkgever" />
           <h3> Werkgever </h3>
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 driedeling-blok" id="cursist-col">
+      <div class="col-sm-4" id="cursist-col">
         <div class="driedeling-blok">
           <img src="img/icons/003-brainstorming-01.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
         <h3> Cursist </h3>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-      <div class="col-sm-4 driedeling-blok" id="robot-col">
+      <div class="col-sm-4" id="robot-col">
         <div class="driedeling-blok">
           <img src="img/icons/004-settings-01.png" class="img-responsive driedeling-icon" alt="icoon robot" />
         <h3> Robot </h3>
@@ -123,7 +123,7 @@
 
         <p>
 
-          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training kost ongeveer 300 euro, deze training bestaat uit 2 dagen theorie, praktijk
+          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training bestaat uit 2 dagen theorie, praktijk
           en online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
         </p>
 
