robot text toegevoegd

--- a/robot.html
+++ b/robot.html
@@ -68,6 +68,22 @@
 <br /><span class="quotename">- Een Robot van Smart Robotics
 </span>
         </h4>
+        <p>
+          De robots zijn een van de hoofdrolspelers in ons trainingsprogramma. Wij maken gebruik van de UR10 en zijn kleine broertjes de UR5 en de UR3. De robots zijn geschikt voor werk in verschillende sectoren,  zoals:
+        <ul>
+          <li>Automotive en toeleveranciers</li>
+          <li>Levensmiddelen en landbouwe</li>
+          <li>Meubilair en uitrusting</li>
+          <li>Elektronica en technologie</li>
+          <li>Metaal en machinebewerking</li>
+          <li>Farmaceutische industrie</li>
+          <li>Wetenschap en onderzoek</li>
+          <li>En nog veel meer</li>
+        </ul>
+        </p>
+        <p>
+          De robots worden gebouwd en geleverd door Universal Robots. Smart Robotics programmeert de robots en maakt ze klaar voor verdere opstelling.
+        </p>
         <h3>De robotschool</h3>
         <p>
           De robots zullen bij de robotacademie zelf opgeleid worden. Hier kunnen wij dezelfde opstelling maken die uiteindelijk gewenst zal zijn bij het bedrijf. Op het moment dat deze helemaal werkt, gaat deze opstelling naar het bedrijf en wordt deze daar geïnstalleerd.
@@ -88,10 +104,10 @@
           </ul>
         </p>
       </div>
-      <a href="index.html" class="gobackbutton"><button type="button" class="btn btn-outline-dark btn-lg">Ga terug naar de Homepage</button></a>
-
+      <div>
+        <a href="index.html" class="gobackbutton"><button type="button" class="btn btn-outline-dark btn-lg">Ga terug naar de Homepage</button></a>
+      </div>
     </div>
-
   </div>
   <footer>
     <div class="row" id="footer">
