--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@
     </div>
     <div class="col-sm-6">
       <h2>Over ons</h2>
-      <h3>Josje Verbeten </h3>
-      <p>Mijn naam is Josje Verbeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari op het NOS-journaal over het uitzendbureau van robots en over het idee
+      <h3>Josje Verbeeten </h3>
+      <p>Mijn naam is Josje Verbeeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari op het NOS-journaal over het uitzendbureau van robots en over het idee
         om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik als achtergrond docent, maar ook adviseur en ik heb gewerkt binnen de overheid en het bedrijfsleven. Op eigen initiatief ben ik op
         de Robotacademie afgestapt en heb nu als functie directeur binnen het bedrijf.
       </p>
