--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h4 id="quote">
           “Als werkgever laat je sociaalwerknemerschap zien, je laat zien dan je de verantwoordelijkheid neemt om je mensen te laten groeien, leren en om je mensen toekomstproof te maken.”<br /><span class="quotename">- Josje Verbeeten</span>
         </h4>
-        <button type="button" class="btn btn-primary btn-readmore" id="btn-overons">Lees meer</button>
+        <a href="cursus.html"><button type="button" class="btn btn-primary btn-readmore">Lees meer</button></a>
       </div>
       <div class="col-sm-6">
         <img src="img/robotacademie-1.jpg" / class="img-responsive">
