--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <div class="col-sm-4" id="cursist-col">
         <div class="driedeling-blok">
           <img src="img/icons/003-brainstorming-01.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
-        <h3> Cursist </h3>
+        <h3> Medewerker </h3>
         <p>
           Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
           om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
         </p>
-        <a href="cursist.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
+        <a href="medewerker.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
       </div>
     </div>
 
