--- a/werkgever.html
+++ b/werkgever.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>HOME | Robot Academie</title>
+  <title>WERKGEVER | Robot Academie</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -43,7 +43,7 @@ header{
           <ul class="nav navbar-nav navbar-right">
             <li class="menu-item"><a href="index.html">home</a></li>
             <li class="menu-item"><a href="about.html">over ons</a></li>
-            <li class="menu-item actief"><a href="cursus.html">cursussen</a></li>
+            <li class="menu-item"><a href="cursus.html">cursussen</a></li>
             <li class="menu-item"><a href="contact.html">contact</a></li>
           </ul>
         </div>
