--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <img src="img/robotarm.png" class="img-responsive" />
       </div>
       <div class="col-sm-8" id="over-ons-introtext">
-        <h3>Be a part of the future</h3>
+        <h4>Be a part of the future</h4>
         <p>Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. De Robotacademie helpt bedrijven zich voor te bereiden op de toekomst
           door middel van 2 dagen theorie, praktijk en een online training over het begeleiden en aansturen van robots.
-          <span id="vraag-overons"> Maar, wat betekent de Robot dan voor mij?</span>
+          <p id="vraag-overons"> Maar, wat betekent de Robot dan voor mij?</p>
         </p>
       </div>
     </div>
