--- a/robot.html
+++ b/robot.html
@@ -93,7 +93,7 @@
           De Robots voeren verschillende taken uit. Deze zijn te verdelen in drie categoriën:
           <ul>
             <li>
-              Palletiseren. Dus het opstapelen van dozen op pellets.
+              Palletiseren. Dus het opstapelen van dozen op pallets.
             </li>
             <li>
               Packaging. Dus het inpakken van kleinere verpakkingen in doosjes.
