--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-  <img id="logo-header" alt="Brand" src="/img/header-icon.png">
-</a>
+          <a class="navbar-brand" href="index.html">
+            <span><img src="img/header-logo.png" id="logo-header" class="d-inline-block align-top" alt="Robot Academie logo">
+            <!-- <span id="brand-name">Robot Academie</span> --></span>
+          </a>
+
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -92,26 +94,26 @@
       <div class="col-sm-4" id="cursist-col">
         <div class="driedeling-blok">
           <img src="img/icons/003-brainstorming-01.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
-        <h3> Medewerker </h3>
-        <p>
-          Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
-          om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
-        </p>
-        <a href="medewerker.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
+          <h3> Medewerker </h3>
+          <p>
+            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
+            om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
+          </p>
+          <a href="medewerker.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
+        </div>
       </div>
-    </div>
 
       <div class="col-sm-4" id="robot-col">
         <div class="driedeling-blok">
           <img src="img/icons/004-settings-01.png" class="img-responsive driedeling-icon" alt="icoon robot" />
-        <h3> Robot </h3>
-        <p>
-          Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit namelijk nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik hoef zelfs niet naar
-          het toilet! Ik zal 24 uur per dag, 7 dagen in de week beschikbaar zijn om aan uw zijde te werken. Ik word natuurlijk graag aangestuurd door even bekwamen operator.
-        </p>
-        <a href="robot.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
+          <h3> Robot </h3>
+          <p>
+            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit namelijk nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik hoef zelfs niet naar het toilet!
+            Ik zal 24 uur per dag, 7 dagen in de week beschikbaar zijn om aan uw zijde te werken. Ik word natuurlijk graag aangestuurd door even bekwamen operator.
+          </p>
+          <a href="robot.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
+        </div>
       </div>
-    </div>
     </div>
 
     <div class="row">
@@ -123,8 +125,8 @@
 
         <p>
 
-          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training bestaat uit 2 dagen theorie, praktijk
-          en online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
+          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training bestaat uit 2 dagen theorie, praktijk en online training. Bij een training
+          laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
         </p>
 
         <h4 id="quote">
