--- a/about.html
+++ b/about.html
@@ -25,9 +25,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-  <img id="logo-header" alt="Brand" src="/img/header-icon.png">
-</a>
+          <a class="navbar-brand" href="index.html">
+            <span><img src="img/header-logo.png" id="logo-header" class="d-inline-block align-top" alt="Robot Academie logo">
+            <!-- <span id="brand-name">Robot Academie</span> --></span>
+          </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -105,9 +106,7 @@
 
   <div class="row">
     <div class="col-sm-6" id="cursussen">
-      <h2>Band met het onderwijs
-
-</h2>
+      <h2>Band met het onderwijs</h2>
       <p> Door even nauwe samenwerking met het onderwijs zullen wij erg innovatief werken. We hebben onder andere contact met de Technische Universiteit Eindhoven en hogeschool Avans. We hebben hierdoor onder andere al wat stagaires en medewerkers van de
         universiteit rondlopen.
 
