--- a/cursus.html
+++ b/cursus.html
@@ -26,9 +26,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-  <img id="logo-header" alt="Brand" src="/img/header-icon.png">
-</a>
+          <a class="navbar-brand" href="index.html">
+            <span><img src="img/header-logo.png" id="logo-header" class="d-inline-block align-top" alt="Robot Academie logo">
+            <!-- <span id="brand-name">Robot Academie</span> --></span>
+          </a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
